css/theme.scss
/* ... */
.testimonials-slider,
.item-reviews,
body.reviews,
body.event,
body.base {
  ul.items {
    @include list-reset;
    @include flex-row;
    padding: var(--gap-items) 0 calc(var(--gap-items) / 2);
    margin: 0 0 calc(var(--gap-items) / 2);
    > li {
      @include card;
      padding: 24px;
      border-radius: 16px;
      border: 1px solid #989898;
      background: #f3f3f3;
      gap: 16px;
      width: 445px !important;
      display: grid;
      grid-template-areas: "rating" "content" "name" "avatar";

      & > .rating {
        grid-area: rating;
      }
      & > .name {
        grid-area: name;
        font-weight: 500;
      }
      & > blockquote {
        grid-area: content;
        text-align: left;
        color: #1a1a1a;
        font-size: 16px;
        font-style: normal;
        font-weight: 400;
        line-height: 20px; /* 125% */
        height: 135px;
        overflow-y: auto;
        & > p {
          margin: 0 0 calc(var(--gap-items) / 2);
        }
      }
      & > img {
        grid-area: avatar;
        border-radius: 100%;
        width: 40px;
        border: 2px solid white;
      }

      & > * {
        padding: 0;
        margin: 0;
      }
    }
  }
}

.brands {
  background: #fafafa;
  max-width: 100vw;
  overflow: hidden;

  .row {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
  }

  @include breakpoints.down("md") {
    padding: var(--gap-items) 0;
    .row {
      flex-direction: column;
      gap: var(--gap-items);
    }
  }

  h2 {
    padding: 0;
    margin: 0;
    width: 270px;
    flex-shrink: 0;
    font-size: 24px;
    line-height: 32px;
    text-align: left;
    margin-right: calc(var(--gap-items) * 2);

    @include breakpoints.down("md") {
      width: auto;
      text-align: center;
      padding: 0 var(--gap-items);
    }
  }

  .brands-scroll-container {
    flex: 1;
    min-width: 0;
    overflow: hidden;
    position: relative;

    &::before,
    &::after {
      content: "";
      display: block;
      width: 5px;
      position: absolute;
      top: 0;
      bottom: 0;
    }
    &::before {
      left: 0;
      background: linear-gradient(
        90deg,
        rgba(250, 250, 250, 1) 0%,
        rgba(250, 250, 250, 0) 100%
      );
    }
    &::after {
      right: 0;
      background: linear-gradient(
        90deg,
        rgba(250, 250, 250, 1) 0%,
        rgba(250, 250, 250, 1) 100%
      );
    }
  }

  .brands-scroll {
    display: flex;
    width: max-content;
    animation: scroll-brands 40s linear infinite;

    &:hover {
      animation-play-state: paused;
    }

    & > div,
    & > ul {
      display: flex;
      flex-shrink: 0;
    }
  }

  ul {
    @include list-reset;
    @include flex-row(96px);
    flex-shrink: 0;

    li {
      flex-shrink: 0;
      display: flex;
      align-items: center;

      .image-wrapper {
        height: 50px;
        width: auto;
        border-radius: none;
        object-fit: contain;
        transition: all 0.3s ease;
        align-content: center;
        border-radius: 0;
      }
    }
  }
}

@keyframes scroll-brands {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

.delivery-how-it-works {
  @include section-padding;
  .grid {
    display: grid;
    grid-template-areas: "header header" "left right";
    justify-content: center;
    align-items: center;
    gap: var(--gap-items);
    & > h2 {
      grid-area: header;
    }
    & > ol {
      grid-area: left;
    }
    & > .right {
      grid-area: right;
      display: flex;
      flex-wrap: wrap;
      gap: 16px;
      .van {
        width: 100%;
      }
      .machine-1,
      .machine-2 {
        width: calc(50% - 8px);
      }
    }
  }

  @include breakpoints.down("md") {
    .image-wrapper {
      display: none;
    }
  }

  ol {
    @include timeline-list;
  }
}

body .content .image-wrapper img {
  width: 100%;
  max-width: 100%;
}

.homepage-how-it-works {
  @include section-padding;
  --color-text: #fff;
  --color-link: #fff;
  --color-link-hover: #fff;
  --background: #009dd7;
  @include themed-section;

  .row {
    @include flex-row(var(--section-padding));
    flex-wrap: wrap;
    margin: 0 auto;
    width: 100%;
    .left {
      @include flex-column(var(--section-padding-half));
      flex: 1 1 400px;
      h2,
      ol {
        max-width: 695px;
      }
    }
    .image {
      @include flex-center;
      flex: 1 1 400px;
      margin: 0;
    }
    h2 {
      @include heading;
    }
    ol {
      @include timeline-list;
      margin: 0;
    }
    a.button {
      @include button-white;
      border-color: transparent;
    }
    .image-wrapper {
      img {
        background: #009dd7;
      }
    }
  }
}

.delivery-intro {
  max-width: 500px;
  margin: 0 auto;
  text-align: center;
  padding-bottom: 32px;
  p {
    display: flex;
    flex-direction: row;
    gap: 16px;
    flex-wrap: wrap;
    justify-content: center;
  }
}

.product-delivery-row {
  @include section-padding;
  background: #fafafa;
  position: relative;
  h2 {
    font-size: 24px;
    font-weight: 500;
    line-height: 32px;
  }
  h2,
  p {
    margin: 0;
    padding: 0;
  }
  .row {
    overflow: hidden;

    img {
      display: block;
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      width: auto;
      height: 100%;
      object-fit: contain;
      opacity: 0.3;
      z-index: 0;
    }
    .left {
      text-align: left;
      align-content: center;
      position: relative;
      z-index: 1;
      display: flex;
      flex-direction: column;
      gap: var(--gap-items);
    }
    @include breakpoints.up("sm") {
      .left {
        padding: var(--section-padding) 0 var(--section-padding) 0;
      }
    }
    @include breakpoints.up("lg") {
      .left {
        width: 50%;
      }
      img {
        opacity: 1;
        left: 50%;
      }
    }
  }
}
/* ... */

